--- a/src/public/index.html
+++ b/src/public/index.html
@@ -68,37 +68,47 @@
         }
 
         .alternative {
-            padding: 15px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            background: white;
-            font-size: 1.1em;
-        }
+        padding: 15px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    background: white;
+    font-size: 1.1em;
+}
 
-        .alternative:hover {
-            background: #f0f0f0;
-            border-color: #2a5298;
-        }
+.alternative:hover {
+    background: #f0f0f0;
+    border-color: #2a5298;
+}
 
-        .selected {
-            background: #2a5298;
-            color: white;
-            border-color: #1e3c72;
-        }
+.selected {
+    background: #2a5298;
+    color: white;
+    border-color: #1e3c72;
+}
 
-        .correct {
-            background: #4CAF50;
-            color: white;
-            border-color: #45a049;
-        }
+.correct {
+    background: #4CAF50;
+    color: white;
+    border-color: #45a049;
+}
 
-        .incorrect {
-            background: #f44336;
-            color: white;
-            border-color: #da190b;
-        }
+.correct:hover {
+    background: #45a049;
+    border-color: #45a049;
+}
+
+.incorrect {
+    background: #f44336;
+    color: white;
+    border-color: #da190b;
+}
+
+.incorrect:hover {
+    background: #da190b;
+    border-color: #da190b;
+}
 
         .explanation {
             margin-top: 20px;
